--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 # Site Settings
+theme: jekflix
+
 name: Jekflix
 title: Jekflix | A blog theme for Jekyll
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
